--- a/config/database.yml
+++ b/config/database.yml
@@ -20,10 +20,13 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: postgres
+  password: 5398
+
 
 development:
   <<: *default
-  database: todo_api_development
+  database: todo-api_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -31,8 +34,6 @@ development:
   # the same name as the operating system user that initialized the database.
 
   # The password associated with the postgres role (username).
-  username: alex
-  password: 5398
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -57,7 +58,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: todo_api_test
+  database: todo-api_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +81,6 @@ test:
 #
 production:
   <<: *default
-  database: todo_api_production
-  username: alex
-  password: 5398
+  database: todo-api_production
+  # username: todo-api
+  # password: <%= ENV['TODO-API_DATABASE_PASSWORD'] %>
